--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "npm run build",
+  "framework": "nextjs",
+  "installCommand": "npm install",
   "redirects": [
     { "source": "/", "destination": "/institutional/", "permanent": true }
   ]
